--- a/services_2.html
+++ b/services_2.html
@@ -41,17 +41,16 @@
         <div class="inner_services section">
           <div class="inner_services_details">
             <div class="section_title">
-              <h2>trade shows and <span>exhibitions.</span></h2>
+              <h2>conference and <span>summit.</span></h2>
             </div>
             <p>
-              Our Event Flow team collaborates closely with a team to create full event planning, including floor plans, booth layouts, and activity scheduling. We also work with exhibitors to understand their objectives and goals and guide and support them throughout the preparation process. Our staff supervises onsite operations during the trade show, including booth registration, setup, teardown, speaker or entertainment arrangements, and addressing any difficulties that may arise. They also monitor guest comments and analyze the event's progress to improve future events.
-
-              Our team is also adaptive, as trade fairs frequently require quick problem-solving and adaptability in a fast-paced setting.              
+                For conferences, our team develops a budget that accounts for all costs, such as venue rental, food, audiovisual equipment, marketing materials, and personnel. To guarantee that the conference stays within the budget, funds must be properly managed.
+                Our event flow management staff has great organizational and communication skills, as well as attention to detail, creative thinking, and versatility. The organizer ensures that the conference accomplishes its objectives, delivers a worthwhile experience for participants, and leaves a lasting impression by employing good preparation and implementation.        
             </p>
           </div>
           <div class="inner_services_carousel">
             <div class="isc_image">
-              <img src="./assets/images/services/trade shows.jpg" alt="">
+              <img src="./assets/images/services/conference.jpg" alt="">
             </div>
           </div>
         </div>
@@ -92,12 +91,12 @@
             </p>
           </div>
           <div class="services_wrapper">
-            <a class="services_cards" href="./services_2.html">
+            <a class="services_cards" href="./services_1.html">
               <div class="services_image">
-                <img src="./assets/images/services/conference.jpg" alt="">
+                <img src="./assets/images/services/trade shows.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Conference and Summit</h3>
+                <h3>Trade Shows and Exhibitions</h3>
               </div>
             </a>
   
@@ -165,7 +164,6 @@
             </a>
   
           </div>
-        </div>
       </main>
       <footer>
         <div class="footer_section_wrapper">
