--- a/services_3.html
+++ b/services_3.html
@@ -41,17 +41,19 @@
         <div class="inner_services section">
           <div class="inner_services_details">
             <div class="section_title">
-              <h2>trade shows and <span>exhibitions.</span></h2>
+              <h2>music festival and <span>concert.</span></h2>
             </div>
             <p>
-              Our Event Flow team collaborates closely with a team to create full event planning, including floor plans, booth layouts, and activity scheduling. We also work with exhibitors to understand their objectives and goals and guide and support them throughout the preparation process. Our staff supervises onsite operations during the trade show, including booth registration, setup, teardown, speaker or entertainment arrangements, and addressing any difficulties that may arise. They also monitor guest comments and analyze the event's progress to improve future events.
-
-              Our team is also adaptive, as trade fairs frequently require quick problem-solving and adaptability in a fast-paced setting.              
+              To build awareness and attract attendance, our team develops a complete marketing approach that includes social media, conventional advertising, and internet-based channels. Work with designers to create visually attractive marketing materials and with public relations firms to get media coverage.
+            </p>
+            <br>
+            <p>
+              Our team of professionals is in charge of creating a flawless, engaging, and unforgettable experience for participants, as well as managing all areas of the event logistics, marketing, and finances.   
             </p>
           </div>
           <div class="inner_services_carousel">
             <div class="isc_image">
-              <img src="./assets/images/services/trade shows.jpg" alt="">
+              <img src="./assets/images/services/music.jpg" alt="">
             </div>
           </div>
         </div>
@@ -92,21 +94,21 @@
             </p>
           </div>
           <div class="services_wrapper">
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/trade shows.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Trade Shows and Exhibitions</h3>
+              </div>
+            </a>
+  
             <a class="services_cards" href="./services_2.html">
               <div class="services_image">
                 <img src="./assets/images/services/conference.jpg" alt="">
               </div>
               <div class="services_cards_details">
                 <h3>Conference and Summit</h3>
-              </div>
-            </a>
-  
-            <a class="services_cards" href="./services_3.html">
-              <div class="services_image">
-                <img src="./assets/images/services/music.jpg" alt="">
-              </div>
-              <div class="services_cards_details">
-                <h3>Music Festival and Concert</h3>
               </div>
             </a>
   
