--- a/services_4.html
+++ b/services_4.html
@@ -41,17 +41,20 @@
         <div class="inner_services section">
           <div class="inner_services_details">
             <div class="section_title">
-              <h2>trade shows and <span>exhibitions.</span></h2>
+              <h2>corporate <span>events.</span></h2>
             </div>
             <p>
-              Our Event Flow team collaborates closely with a team to create full event planning, including floor plans, booth layouts, and activity scheduling. We also work with exhibitors to understand their objectives and goals and guide and support them throughout the preparation process. Our staff supervises onsite operations during the trade show, including booth registration, setup, teardown, speaker or entertainment arrangements, and addressing any difficulties that may arise. They also monitor guest comments and analyze the event's progress to improve future events.
-
-              Our team is also adaptive, as trade fairs frequently require quick problem-solving and adaptability in a fast-paced setting.              
+              At our core, we recognize the significance of creating memorable and relevant business events. Whether you are organizing a conference, seminar, product launch, or team-building exercise, our trained specialists will work directly with you to ensure that every aspect is precisely carried out.
+            </p>
+            <br>
+            <p>
+              Our rigorous attention to detail separates us. All aspects of the event will be handled by us, including venue selection, logistics, food, audio-visual installations, and entertainment. Our extensive list of reliable vendors signifies that we can supply you with high-quality services at reasonable prices.
+  
             </p>
           </div>
           <div class="inner_services_carousel">
             <div class="isc_image">
-              <img src="./assets/images/services/trade shows.jpg" alt="">
+              <img src="./assets/images/services/corporate.jpg" alt="">
             </div>
           </div>
         </div>
@@ -92,6 +95,15 @@
             </p>
           </div>
           <div class="services_wrapper">
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/trade shows.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Trade Shows and Exhibitions</h3>
+              </div>
+            </a>
+  
             <a class="services_cards" href="./services_2.html">
               <div class="services_image">
                 <img src="./assets/images/services/conference.jpg" alt="">
@@ -107,15 +119,6 @@
               </div>
               <div class="services_cards_details">
                 <h3>Music Festival and Concert</h3>
-              </div>
-            </a>
-  
-            <a class="services_cards" href="./services_4.html">
-              <div class="services_image">
-                <img src="./assets/images/services/corporate.jpg" alt="">
-              </div>
-              <div class="services_cards_details">
-                <h3>Corporate Events</h3>
               </div>
             </a>
   
