--- a/services_5.html
+++ b/services_5.html
@@ -41,17 +41,15 @@
         <div class="inner_services section">
           <div class="inner_services_details">
             <div class="section_title">
-              <h2>trade shows and <span>exhibitions.</span></h2>
+              <h2>social and <span>cultural.</span></h2>
             </div>
             <p>
-              Our Event Flow team collaborates closely with a team to create full event planning, including floor plans, booth layouts, and activity scheduling. We also work with exhibitors to understand their objectives and goals and guide and support them throughout the preparation process. Our staff supervises onsite operations during the trade show, including booth registration, setup, teardown, speaker or entertainment arrangements, and addressing any difficulties that may arise. They also monitor guest comments and analyze the event's progress to improve future events.
-
-              Our team is also adaptive, as trade fairs frequently require quick problem-solving and adaptability in a fast-paced setting.              
+              This role provides an extraordinary chance to immerse attendees in the dynamic world of cultural festivals. From choosing the theme and location to arranging performances, displays, and culinary experiences, our keen eye for detail will guarantee that every part of the event represents the depth and diversity of our client's cultural heritage.
             </p>
           </div>
           <div class="inner_services_carousel">
             <div class="isc_image">
-              <img src="./assets/images/services/trade shows.jpg" alt="">
+              <img src="./assets/images/services/cultural.jpg" alt="">
             </div>
           </div>
         </div>
@@ -92,6 +90,15 @@
             </p>
           </div>
           <div class="services_wrapper">
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/trade shows.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Trade Shows and Exhibitions</h3>
+              </div>
+            </a>
+  
             <a class="services_cards" href="./services_2.html">
               <div class="services_image">
                 <img src="./assets/images/services/conference.jpg" alt="">
@@ -116,15 +123,6 @@
               </div>
               <div class="services_cards_details">
                 <h3>Corporate Events</h3>
-              </div>
-            </a>
-  
-            <a class="services_cards" href="./services_5.html">
-              <div class="services_image">
-                <img src="./assets/images/services/cultural.jpg" alt="">
-              </div>
-              <div class="services_cards_details">
-                <h3>Social and Cultural</h3>
               </div>
             </a>
   
