--- a/services_8.html
+++ b/services_8.html
@@ -41,17 +41,20 @@
         <div class="inner_services section">
           <div class="inner_services_details">
             <div class="section_title">
-              <h2>trade shows and <span>exhibitions.</span></h2>
+              <h2>personal <span>concierge.</span></h2>
             </div>
             <p>
-              Our Event Flow team collaborates closely with a team to create full event planning, including floor plans, booth layouts, and activity scheduling. We also work with exhibitors to understand their objectives and goals and guide and support them throughout the preparation process. Our staff supervises onsite operations during the trade show, including booth registration, setup, teardown, speaker or entertainment arrangements, and addressing any difficulties that may arise. They also monitor guest comments and analyze the event's progress to improve future events.
-
-              Our team is also adaptive, as trade fairs frequently require quick problem-solving and adaptability in a fast-paced setting.              
+              We will handle every aspect from start to end to guarantee that your event is flawless and unforgettable. Our professional event organizers will collaborate with you to fully grasp your vision, preferences, and needs. We can manage events of all kinds and sorts, whether they are small private gatherings or huge celebrations.
             </p>
+            <br>
+            <p>
+              Don't let event planning overwhelm you any longer. Allow our personal concierge event organizing service to handle all of the details so you can focus on enjoying your event. Contact us immediately to reserve our services and go on an event-planning trip like no other.
+            </p>
+
           </div>
           <div class="inner_services_carousel">
             <div class="isc_image">
-              <img src="./assets/images/services/trade shows.jpg" alt="">
+              <img src="./assets/images/services/concierge.jpg" alt="">
             </div>
           </div>
         </div>
@@ -92,6 +95,15 @@
             </p>
           </div>
           <div class="services_wrapper">
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/trade shows.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Trade Shows and Exhibitions</h3>
+              </div>
+            </a>
+  
             <a class="services_cards" href="./services_2.html">
               <div class="services_image">
                 <img src="./assets/images/services/conference.jpg" alt="">
@@ -143,15 +155,6 @@
               </div>
               <div class="services_cards_details">
                 <h3>Wedding and Celebration</h3>
-              </div>
-            </a>
-  
-            <a class="services_cards" href="./services_8.html">
-              <div class="services_image">
-                <img src="./assets/images/services/concierge.jpg" alt="">
-              </div>
-              <div class="services_cards_details">
-                <h3>Personal Concierge</h3>
               </div>
             </a>
   
