--- a/services_9.html
+++ b/services_9.html
@@ -41,17 +41,16 @@
         <div class="inner_services section">
           <div class="inner_services_details">
             <div class="section_title">
-              <h2>trade shows and <span>exhibitions.</span></h2>
+              <h2>event <span>venue.</span></h2>
             </div>
             <p>
-              Our Event Flow team collaborates closely with a team to create full event planning, including floor plans, booth layouts, and activity scheduling. We also work with exhibitors to understand their objectives and goals and guide and support them throughout the preparation process. Our staff supervises onsite operations during the trade show, including booth registration, setup, teardown, speaker or entertainment arrangements, and addressing any difficulties that may arise. They also monitor guest comments and analyze the event's progress to improve future events.
-
-              Our team is also adaptive, as trade fairs frequently require quick problem-solving and adaptability in a fast-paced setting.              
+              As industry professionals, our team of professionals has significant expertise and contacts with a wide range of venues, from conference rooms and hotels to outdoor areas and unusual locales. We can suggest the best venue depending on the client's needs, such as the type of event, budget, location, capacity, and theme. By evaluating these factors, we, the event organizers may choose a venue that fits our client's vision and assures a successful and memorable event.
             </p>
+
           </div>
           <div class="inner_services_carousel">
             <div class="isc_image">
-              <img src="./assets/images/services/trade shows.jpg" alt="">
+              <img src="./assets/images/services/event.jpg" alt="">
             </div>
           </div>
         </div>
@@ -92,6 +91,15 @@
             </p>
           </div>
           <div class="services_wrapper">
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/trade shows.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Trade Shows and Exhibitions</h3>
+              </div>
+            </a>
+  
             <a class="services_cards" href="./services_2.html">
               <div class="services_image">
                 <img src="./assets/images/services/conference.jpg" alt="">
@@ -152,15 +160,6 @@
               </div>
               <div class="services_cards_details">
                 <h3>Personal Concierge</h3>
-              </div>
-            </a>
-  
-            <a class="services_cards" href="./services_9.html">
-              <div class="services_image">
-                <img src="./assets/images/services/event.jpg" alt="">
-              </div>
-              <div class="services_cards_details">
-                <h3>Event Venue</h3>
               </div>
             </a>
   
