--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <p>
                 Our team meticulously manages conference budgets, covering all costs. With strong organizational and communication skills, creativity, and versatility, we ensure conferences meet objectives, provide a valuable experience, and leave a lasting impression through effective preparation and implementation.
               </p>
-              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <a href="services_2.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
@@ -152,7 +152,7 @@
               <p>
                 Our team crafts a comprehensive marketing strategy, utilizing social media, traditional advertising, and online channels. We collaborate with designers for visually appealing materials and PR firms for media coverage. Our professionals ensure flawless event logistics, marketing, and financial management for an engaging and unforgettable participant experience.
               </p>
-              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <a href="services_3.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
@@ -163,7 +163,7 @@
               <p>
                 We specialize in creating memorable business events, handling everything from conferences to product launches. Our trained specialists ensure precise execution, managing venue selection, logistics, catering, audio-visual setups, and entertainment. With a reliable network of vendors, we deliver high-quality services at reasonable prices.
               </p>
-              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <a href="services_4.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
@@ -174,7 +174,7 @@
               <p>
                 This role provides an extraordinary chance to immerse attendees in the dynamic world of cultural festivals. From choosing the theme and location to arranging performances, displays, and culinary experiences, our keen eye for detail will guarantee that every part of the event represents the depth and diversity of our client's cultural heritage.
               </p>
-              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <a href="services_5.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
@@ -185,7 +185,7 @@
               <p>
                 We've left no stone unturned to make this event smooth and unforgettable. From world-class venues to simple transportation, we aim for the highest comfort and convenience for our audience. Enjoy every moment of the sports spectacle, from heart-pounding track and field to nail-biting basketball. Our event is not just about rivalry; it's about delivering a memorable experience for everyone attending.
               </p>
-              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <a href="services_6.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
@@ -196,7 +196,7 @@
               <p>
                 Specializing in exceptional events like weddings, receptions, anniversaries, and more, we work closely with you to capture your unique style and preferences. From initial consultation to final farewell, our team manages every detail – choosing beautiful locations, handling vendor reservations, and arranging exquisite decor – ensuring a magnificent environment that reflects your desires.
               </p>
-              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <a href="services_7.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
@@ -207,7 +207,7 @@
               <p>
                 We handle all aspects of your event, ensuring it's flawless and unforgettable. Our professional organizers work closely with you, managing events of all sizes. Let our concierge service handle the details, allowing you to focus on enjoying your event. Contact us to reserve our services for a unique event-planning experience.
               </p>
-              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <a href="services_8.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
@@ -218,7 +218,7 @@
               <p>
                 As industry professionals, our team of professionals has significant expertise and contacts with a wide range of venues, from conference rooms and hotels to outdoor areas and unusual locales. We can suggest the best venue depending on the client's needs, such as the type of event, budget, location, capacity, and theme. By evaluating these factors, we, the event organizers may choose a venue that fits our client's vision and assures a successful and memorable event.
               </p>
-              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              <a href="services_9.html" class="button" style="background-color: var(--clr-background);">Read More</a>
             </div>
           </div>
 
@@ -255,7 +255,7 @@
           </div>
 
           <div class="services_wrapper">
-            <a class="services_cards" href="./services_1.html">
+            <a class="services_cards" style="cursor: default;">
               <div class="services_image">
                 <img src="./assets/images/events/event1.jpg" alt="" loading='lazy'>
               </div>
@@ -267,7 +267,7 @@
               </div>
             </a>
 
-            <a class="services_cards" href="./services_1.html">
+            <a class="services_cards" style="cursor: default;">
               <div class="services_image">
                 <img src="./assets/images/events/event2.jpg" alt="">
               </div>
@@ -277,7 +277,7 @@
               </div>
             </a>
 
-            <a class="services_cards" href="./services_1.html">
+            <a class="services_cards" style="cursor: default;">
               <div class="services_image">
                 <img src="./assets/images/events/event3.jpg" alt="">
               </div>
