--- a/services_6.html
+++ b/services_6.html
@@ -41,17 +41,23 @@
         <div class="inner_services section">
           <div class="inner_services_details">
             <div class="section_title">
-              <h2>trade shows and <span>exhibitions.</span></h2>
+              <h2>sporting <span>events.</span></h2>
             </div>
             <p>
-              Our Event Flow team collaborates closely with a team to create full event planning, including floor plans, booth layouts, and activity scheduling. We also work with exhibitors to understand their objectives and goals and guide and support them throughout the preparation process. Our staff supervises onsite operations during the trade show, including booth registration, setup, teardown, speaker or entertainment arrangements, and addressing any difficulties that may arise. They also monitor guest comments and analyze the event's progress to improve future events.
-
-              Our team is also adaptive, as trade fairs frequently require quick problem-solving and adaptability in a fast-paced setting.              
+              As organizers, we have left no stone unturned in our effort to make this event smooth and unforgettable. From world-class venue amenities to simple transportation arrangements, we endeavor to give the highest comfort and convenience to all of our audience members. We want you to spend your time exclusively taking in the sports spectacle and enjoying every moment of it.
             </p>
+            <br>
+            <p>
+              From heart-pounding track and field events to nail-biting basketball clashes, this event promises to be a compelling demonstration of skill, determination, and absolute athletic greatness.</p>
+            <br>
+            <p>
+              But it's not just about rivalry. Our event strives to deliver a memorable experience for everyone who attends.
+            </p>
+
           </div>
           <div class="inner_services_carousel">
             <div class="isc_image">
-              <img src="./assets/images/services/trade shows.jpg" alt="">
+              <img src="./assets/images/services/sport.jpg" alt="">
             </div>
           </div>
         </div>
@@ -92,6 +98,15 @@
             </p>
           </div>
           <div class="services_wrapper">
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/trade shows.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Trade Shows and Exhibitions</h3>
+              </div>
+            </a>
+  
             <a class="services_cards" href="./services_2.html">
               <div class="services_image">
                 <img src="./assets/images/services/conference.jpg" alt="">
@@ -125,15 +140,6 @@
               </div>
               <div class="services_cards_details">
                 <h3>Social and Cultural</h3>
-              </div>
-            </a>
-  
-            <a class="services_cards" href="./services_6.html">
-              <div class="services_image">
-                <img src="./assets/images/services/sport.jpg" alt="">
-              </div>
-              <div class="services_cards_details">
-                <h3>Sporting Events</h3>
               </div>
             </a>
   
