--- a/services_7.html
+++ b/services_7.html
@@ -41,17 +41,20 @@
         <div class="inner_services section">
           <div class="inner_services_details">
             <div class="section_title">
-              <h2>trade shows and <span>exhibitions.</span></h2>
+              <h2>wedding and <span>celebration.</span></h2>
             </div>
             <p>
-              Our Event Flow team collaborates closely with a team to create full event planning, including floor plans, booth layouts, and activity scheduling. We also work with exhibitors to understand their objectives and goals and guide and support them throughout the preparation process. Our staff supervises onsite operations during the trade show, including booth registration, setup, teardown, speaker or entertainment arrangements, and addressing any difficulties that may arise. They also monitor guest comments and analyze the event's progress to improve future events.
-
-              Our team is also adaptive, as trade fairs frequently require quick problem-solving and adaptability in a fast-paced setting.              
+              We specialize in designing and implementing outstanding wedding ceremonies, receptions, anniversary celebrations, birthdays, graduations, and other events. Our staff acknowledges that each event is unique and personal, so we work closely with you to establish your tastes, style, and intended environment.
             </p>
+            <br>
+            <p>
+              From the initial consultation to the last farewell, we manage every step of the event preparation process. We choose the most gorgeous locations, handle vendor reservations, design tailored event timetables, and arrange exquisite décor to complement your concept. Our qualified employees will make certain that every detail, from the flowers to the table settings, is painstakingly organized to create a magnificent environment that represents your style and desires.
+            </p>
+
           </div>
           <div class="inner_services_carousel">
             <div class="isc_image">
-              <img src="./assets/images/services/trade shows.jpg" alt="">
+              <img src="./assets/images/services/wedding.jpg" alt="">
             </div>
           </div>
         </div>
@@ -92,6 +95,15 @@
             </p>
           </div>
           <div class="services_wrapper">
+            <a class="services_cards" href="./services_1.html">
+              <div class="services_image">
+                <img src="./assets/images/services/trade shows.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Trade Shows and Exhibitions</h3>
+              </div>
+            </a>
+  
             <a class="services_cards" href="./services_2.html">
               <div class="services_image">
                 <img src="./assets/images/services/conference.jpg" alt="">
@@ -134,15 +146,6 @@
               </div>
               <div class="services_cards_details">
                 <h3>Sporting Events</h3>
-              </div>
-            </a>
-  
-            <a class="services_cards" href="./services_7.html">
-              <div class="services_image">
-                <img src="./assets/images/services/wedding.jpg" alt="">
-              </div>
-              <div class="services_cards_details">
-                <h3>Wedding and Celebration</h3>
               </div>
             </a>
   
