--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Event Flows Bangkok</title>
+    <title>Event Flow Bangkok</title>
   </head>
   <body>
       <header class="header" id="app">
@@ -80,7 +80,7 @@
                 <h1 class="hero__changing" id="changingText">delightful</h1>
                 <h1>experience</h1>    
               </div>
-              <p>Experience the extraordinary: Where moments become memories,  <br> join us for an unforgettable journey at Event Flows Bangkok</p>
+              <p>Experience the extraordinary: Where moments become memories,  <br> join us for an unforgettable journey at Event Flow Bangkok</p>
               <a href='services.html' class="hero_get_started button">Get Started</a>
             </div>
             <img src="./assets/images/hero_image.png" alt="">
