Updated Services Background
- Takes up whole viewport width instead of section

--- a/index.html
+++ b/index.html
@@ -104,146 +104,135 @@
           </div>
         </div>
 
-        <div class="services section">
-          <div class="section_title">
-            <h2>our <span style="color: var(--clr-background);">services</span></h2>
-            <p>We can infiltrate any sort of event where our knowledge and experience can offer value, improve the experience for attendees, and create a successful gathering.</p>
-          </div>
-          <!-- Tab links -->
-          <div class="tab">
-            <button class="tablinks active" onclick="openCity(event, 'TE')">Tradeshow and Exhibition</button>
-            <button class="tablinks" onclick="openCity(event, 'CS')">Conference and Summit</button>
-            <button class="tablinks" onclick="openCity(event, 'MC')">Music Festival and Concert</button>
-            <button class="tablinks" onclick="openCity(event, 'CE')">Corporate Events</button>
-            <button class="tablinks" onclick="openCity(event, 'SC')">Social and Cultural</button>
-            <button class="tablinks" onclick="openCity(event, 'SS')">Sporting Events</button>
-            <button class="tablinks" onclick="openCity(event, 'WC')">Wedding and Celebration</button>
-            <button class="tablinks" onclick="openCity(event, 'PC')">Personal Concierge</button>
-            <button class="tablinks" onclick="openCity(event, 'EV')">Event Venue</button>
-          </div>
-
-          <!-- Tab content -->
-          <div id="TE" class="tabcontent" style="display: flex;">
-            <img src="./assets/images/services/trade shows.jpg" alt="" loading='lazy'>
-            <div class="tabcontent-info">
-              <h3>Trade Show and Exhibitions</h3>
-              <p>
-                Our Event Flow team collaborates with partners for comprehensive event planning, covering floor plans, booth layouts, and activity scheduling. We guide exhibitors, supervise onsite operations, address challenges, and analyze event progress for continuous improvement. Our adaptive team excels in quick problem-solving and thrives in fast-paced trade fair settings.
-              </p>
-              <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+        <div class="services_background">
+          <div class="services section">
+            <div class="section_title">
+              <h2>our <span style="color: var(--clr-background);">services</span></h2>
+              <p>We can infiltrate any sort of event where our knowledge and experience can offer value, improve the experience for attendees, and create a successful gathering.</p>
             </div>
-          </div>
-
-          <div id="CS" class="tabcontent">
-            <img src="./assets/images/services/conference.jpg" alt="">
-            <div class="tabcontent-info">
-              <h3>Conference and Summit</h3>
-              <p>
-                Our team meticulously manages conference budgets, covering all costs. With strong organizational and communication skills, creativity, and versatility, we ensure conferences meet objectives, provide a valuable experience, and leave a lasting impression through effective preparation and implementation.
-              </p>
-              <a href="services_2.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            <!-- Tab links -->
+            <div class="tab">
+              <button class="tablinks active" onclick="openCity(event, 'TE')">Tradeshow and Exhibition</button>
+              <button class="tablinks" onclick="openCity(event, 'CS')">Conference and Summit</button>
+              <button class="tablinks" onclick="openCity(event, 'MC')">Music Festival and Concert</button>
+              <button class="tablinks" onclick="openCity(event, 'CE')">Corporate Events</button>
+              <button class="tablinks" onclick="openCity(event, 'SC')">Social and Cultural</button>
+              <button class="tablinks" onclick="openCity(event, 'SS')">Sporting Events</button>
+              <button class="tablinks" onclick="openCity(event, 'WC')">Wedding and Celebration</button>
+              <button class="tablinks" onclick="openCity(event, 'PC')">Personal Concierge</button>
+              <button class="tablinks" onclick="openCity(event, 'EV')">Event Venue</button>
             </div>
-          </div>
-
-          <div id="MC" class="tabcontent">
-            <img src="./assets/images/services/music.jpg" alt="">
-            <div class="tabcontent-info">
-              <h3>Music Festival and Concert</h3>
-              <p>
-                Our team crafts a comprehensive marketing strategy, utilizing social media, traditional advertising, and online channels. We collaborate with designers for visually appealing materials and PR firms for media coverage. Our professionals ensure flawless event logistics, marketing, and financial management for an engaging and unforgettable participant experience.
-              </p>
-              <a href="services_3.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            <!-- Tab content -->
+            <div id="TE" class="tabcontent" style="display: flex;">
+              <img src="./assets/images/services/trade shows.jpg" alt="" loading='lazy'>
+              <div class="tabcontent-info">
+                <h3>Trade Show and Exhibitions</h3>
+                <p>
+                  Our Event Flow team collaborates with partners for comprehensive event planning, covering floor plans, booth layouts, and activity scheduling. We guide exhibitors, supervise onsite operations, address challenges, and analyze event progress for continuous improvement. Our adaptive team excels in quick problem-solving and thrives in fast-paced trade fair settings.
+                </p>
+                <a href="services_1.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              </div>
             </div>
-          </div>
-
-          <div id="CE" class="tabcontent">
-            <img src="./assets/images/services/corporate.jpg" alt="">
-            <div class="tabcontent-info">
-              <h3>Corporate Events</h3>
-              <p>
-                We specialize in creating memorable business events, handling everything from conferences to product launches. Our trained specialists ensure precise execution, managing venue selection, logistics, catering, audio-visual setups, and entertainment. With a reliable network of vendors, we deliver high-quality services at reasonable prices.
-              </p>
-              <a href="services_4.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            <div id="CS" class="tabcontent">
+              <img src="./assets/images/services/conference.jpg" alt="">
+              <div class="tabcontent-info">
+                <h3>Conference and Summit</h3>
+                <p>
+                  Our team meticulously manages conference budgets, covering all costs. With strong organizational and communication skills, creativity, and versatility, we ensure conferences meet objectives, provide a valuable experience, and leave a lasting impression through effective preparation and implementation.
+                </p>
+                <a href="services_2.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              </div>
             </div>
-          </div>
-
-          <div id="SC" class="tabcontent">
-            <img src="./assets/images/services/cultural.jpg" alt="">
-            <div class="tabcontent-info">
-              <h3>Social and Cultural</h3>
-              <p>
-                This role provides an extraordinary chance to immerse attendees in the dynamic world of cultural festivals. From choosing the theme and location to arranging performances, displays, and culinary experiences, our keen eye for detail will guarantee that every part of the event represents the depth and diversity of our client's cultural heritage.
-              </p>
-              <a href="services_5.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            <div id="MC" class="tabcontent">
+              <img src="./assets/images/services/music.jpg" alt="">
+              <div class="tabcontent-info">
+                <h3>Music Festival and Concert</h3>
+                <p>
+                  Our team crafts a comprehensive marketing strategy, utilizing social media, traditional advertising, and online channels. We collaborate with designers for visually appealing materials and PR firms for media coverage. Our professionals ensure flawless event logistics, marketing, and financial management for an engaging and unforgettable participant experience.
+                </p>
+                <a href="services_3.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              </div>
             </div>
-          </div>
-
-          <div id="SS" class="tabcontent">
-            <img src="./assets/images/services/sport.jpg" alt="">
-            <div class="tabcontent-info">
-              <h3>Sporting Events</h3>
-              <p>
-                We've left no stone unturned to make this event smooth and unforgettable. From world-class venues to simple transportation, we aim for the highest comfort and convenience for our audience. Enjoy every moment of the sports spectacle, from heart-pounding track and field to nail-biting basketball. Our event is not just about rivalry; it's about delivering a memorable experience for everyone attending.
-              </p>
-              <a href="services_6.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            <div id="CE" class="tabcontent">
+              <img src="./assets/images/services/corporate.jpg" alt="">
+              <div class="tabcontent-info">
+                <h3>Corporate Events</h3>
+                <p>
+                  We specialize in creating memorable business events, handling everything from conferences to product launches. Our trained specialists ensure precise execution, managing venue selection, logistics, catering, audio-visual setups, and entertainment. With a reliable network of vendors, we deliver high-quality services at reasonable prices.
+                </p>
+                <a href="services_4.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              </div>
             </div>
-          </div>
-
-          <div id="WC" class="tabcontent">
-            <img src="./assets/images/services/wedding.jpg" alt="">
-            <div class="tabcontent-info">
-              <h3>Wedding and Celebration</h3>
-              <p>
-                Specializing in exceptional events like weddings, receptions, anniversaries, and more, we work closely with you to capture your unique style and preferences. From initial consultation to final farewell, our team manages every detail – choosing beautiful locations, handling vendor reservations, and arranging exquisite decor – ensuring a magnificent environment that reflects your desires.
-              </p>
-              <a href="services_7.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            <div id="SC" class="tabcontent">
+              <img src="./assets/images/services/cultural.jpg" alt="">
+              <div class="tabcontent-info">
+                <h3>Social and Cultural</h3>
+                <p>
+                  This role provides an extraordinary chance to immerse attendees in the dynamic world of cultural festivals. From choosing the theme and location to arranging performances, displays, and culinary experiences, our keen eye for detail will guarantee that every part of the event represents the depth and diversity of our client's cultural heritage.
+                </p>
+                <a href="services_5.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              </div>
             </div>
-          </div>
-
-          <div id="PC" class="tabcontent">
-            <img src="./assets/images/services/concierge.jpg" alt="">
-            <div class="tabcontent-info">
-              <h3>Personal Concierge</h3>
-              <p>
-                We handle all aspects of your event, ensuring it's flawless and unforgettable. Our professional organizers work closely with you, managing events of all sizes. Let our concierge service handle the details, allowing you to focus on enjoying your event. Contact us to reserve our services for a unique event-planning experience.
-              </p>
-              <a href="services_8.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            <div id="SS" class="tabcontent">
+              <img src="./assets/images/services/sport.jpg" alt="">
+              <div class="tabcontent-info">
+                <h3>Sporting Events</h3>
+                <p>
+                  We've left no stone unturned to make this event smooth and unforgettable. From world-class venues to simple transportation, we aim for the highest comfort and convenience for our audience. Enjoy every moment of the sports spectacle, from heart-pounding track and field to nail-biting basketball. Our event is not just about rivalry; it's about delivering a memorable experience for everyone attending.
+                </p>
+                <a href="services_6.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              </div>
             </div>
-          </div>
-
-          <div id="EV" class="tabcontent">
-            <img src="./assets/images/services/event.jpg" alt="">
-            <div class="tabcontent-info">
-              <h3>Event Venue</h3>
-              <p>
-                As industry professionals, our team of professionals has significant expertise and contacts with a wide range of venues, from conference rooms and hotels to outdoor areas and unusual locales. We can suggest the best venue depending on the client's needs, such as the type of event, budget, location, capacity, and theme. By evaluating these factors, we, the event organizers may choose a venue that fits our client's vision and assures a successful and memorable event.
-              </p>
-              <a href="services_9.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+            <div id="WC" class="tabcontent">
+              <img src="./assets/images/services/wedding.jpg" alt="">
+              <div class="tabcontent-info">
+                <h3>Wedding and Celebration</h3>
+                <p>
+                  Specializing in exceptional events like weddings, receptions, anniversaries, and more, we work closely with you to capture your unique style and preferences. From initial consultation to final farewell, our team manages every detail – choosing beautiful locations, handling vendor reservations, and arranging exquisite decor – ensuring a magnificent environment that reflects your desires.
+                </p>
+                <a href="services_7.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              </div>
             </div>
-          </div>
-
-          <script>
-            function openCity(evt, cityName) {
-              // Declare all variables
-              var i, tabcontent, tablinks;
-
-              // Get all elements with class="tabcontent" and hide them
-              tabcontent = document.getElementsByClassName("tabcontent");
-              for (i = 0; i < tabcontent.length; i++) {
-                tabcontent[i].style.display = "none";
+            <div id="PC" class="tabcontent">
+              <img src="./assets/images/services/concierge.jpg" alt="">
+              <div class="tabcontent-info">
+                <h3>Personal Concierge</h3>
+                <p>
+                  We handle all aspects of your event, ensuring it's flawless and unforgettable. Our professional organizers work closely with you, managing events of all sizes. Let our concierge service handle the details, allowing you to focus on enjoying your event. Contact us to reserve our services for a unique event-planning experience.
+                </p>
+                <a href="services_8.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              </div>
+            </div>
+            <div id="EV" class="tabcontent">
+              <img src="./assets/images/services/event.jpg" alt="">
+              <div class="tabcontent-info">
+                <h3>Event Venue</h3>
+                <p>
+                  As industry professionals, our team of professionals has significant expertise and contacts with a wide range of venues, from conference rooms and hotels to outdoor areas and unusual locales. We can suggest the best venue depending on the client's needs, such as the type of event, budget, location, capacity, and theme. By evaluating these factors, we, the event organizers may choose a venue that fits our client's vision and assures a successful and memorable event.
+                </p>
+                <a href="services_9.html" class="button" style="background-color: var(--clr-background);">Read More</a>
+              </div>
+            </div>
+            <script>
+              function openCity(evt, cityName) {
+                // Declare all variables
+                var i, tabcontent, tablinks;
+                // Get all elements with class="tabcontent" and hide them
+                tabcontent = document.getElementsByClassName("tabcontent");
+                for (i = 0; i < tabcontent.length; i++) {
+                  tabcontent[i].style.display = "none";
+                }
+                // Get all elements with class="tablinks" and remove the class "active"
+                tablinks = document.getElementsByClassName("tablinks");
+                for (i = 0; i < tablinks.length; i++) {
+                  tablinks[i].className = tablinks[i].className.replace(" active", "");
+                }
+                // Show the current tab, and add an "active" class to the button that opened the tab
+                document.getElementById(cityName).style.display = "flex";
+                evt.currentTarget.className += " active";
               }
-
-              // Get all elements with class="tablinks" and remove the class "active"
-              tablinks = document.getElementsByClassName("tablinks");
-              for (i = 0; i < tablinks.length; i++) {
-                tablinks[i].className = tablinks[i].className.replace(" active", "");
-              }
-
-              // Show the current tab, and add an "active" class to the button that opened the tab
-              document.getElementById(cityName).style.display = "flex";
-              evt.currentTarget.className += " active";
-            }
-          </script>
+            </script>
+          </div>
         </div>
 
         <div class="events section">
